--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
-    "builds":[
-        {
-            "src":"./index.js",
-            "use":"@vercel/node"
-        }
+    "version": 2,
+    "builds": [
+      {
+        "src": "package.json", 
+        "use": "vercel-sapper"
+      }
     ],
     "routes":[
         {
@@ -11,4 +12,4 @@
             "dest":"index.js"
         }
     ]
-}
+  }
